# chip-8-emulator

./: .clang-format  CMakeLists.txt
src/: chip.cpp  chip.h  display.cpp  display.h  io.cpp  io.h  main.cpp
